# agent-style-transfer

./: .env.sample  .flake8  .gitignore  README.md  examples.md  generate-content.py  lint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_style_transfer.py  test_basic.py  test_comprehensive.py  test_style_schemas.py
.github/workflows/: test.yml
agent_style_transfer/: __init__.py  agent.py  evaluation.py  llm_provider_setup.py  prompt_builder.py  schemas.py  writing_style_inferrer.py
agent_style_transfer/evals/: __init__.py  content_preservation.py  evaluator.py  platform_appropriateness.py  quality.py  style_fidelity.py
agent_style_transfer/utils/: __init__.py  evaluation.py  pydantic_utils.py
examples/: linkedin-fullstack-skills.json  multi-platform-content.json  sample_request.json  single-tech-tweet.json
fixtures/: linkedin-request.json
scripts/: README.md  lint.sh
tests/: conftest.py  test_agent.py  test_basic.py  test_comprehensive.py  test_comprehensive_schemas.py  test_evaluator_utils.py  test_evaluators.py  test_llm_provider.py  test_style_schemas.py  test_writing_style_inferrer.py
tests/cassettes/: test_content_preservation_evaluation.yaml  test_evaluate_all.yaml  test_evaluation_error_handling.yaml  test_evaluation_without_api_calls.yaml  test_linkedin_fullstack_skills.yaml  test_linkedin_post_evaluation.yaml  test_multi_platform_content.yaml  test_multi_platform_evaluation.yaml  test_platform_appropriateness_evaluation.yaml  test_quality_evaluation.yaml  test_single_tech_tweet.yaml  test_style_fidelity_evaluation.yaml
